Corrected spacing issue with todays headline area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,7 @@ body {
 	max-width: 1400px;
 	margin: 0 auto;
 }
+
+#form-heading {
+	padding-top: 41px;
+}
